--- a/assets/css/responsive.scss
+++ b/assets/css/responsive.scss
@@ -4034,7 +4034,7 @@ $navbar-color : #1B3864;
 
   // Register, Login CSS
 
-  .login-body,.register-body,.success-purchase-body{
+  .login-body,.register-body,.confirm-purchase-body,.success-purchase-body{
     transition: 0.2s ease;
     position: absolute;
     width: 100%;
