--- a/template/failed_purchase.html
+++ b/template/failed_purchase.html
@@ -23,7 +23,7 @@
   <div class="register-holder">
     <div class="upper failed">
       <img class="failed-purchase-img" src="/thecup/resources/img/failed-ic.svg" alt="">
-      <p class="reg-title failed">Thanh toán thành công</p>
+      <p class="reg-title failed">Thanh toán thất bại</p>
       <p class="purchase-text">Số tiền thanh toán</p>
       <p class="purchase-amount">200.000</p>
 
