--- a/template/image_post.html
+++ b/template/image_post.html
@@ -249,18 +249,24 @@
     <!--Life-Carousel-start-->
     <div id="life-carousel" class="carousel slide carousel-fade life-carousel-holder" data-bs-ride="none">
       <div class="carousel-indicators">
-        <button type="button" data-bs-target="#life-carousel" data-bs-slide-to="0" class="active"
+        <button id="img1" type="button" data-bs-target="#life-carousel" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#life-carousel" data-bs-slide-to="1"
+        <button id="img2" type="button" data-bs-target="#life-carousel" data-bs-slide-to="1"
                 aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#life-carousel" data-bs-slide-to="2"
+        <button id="img3" type="button" data-bs-target="#life-carousel" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
+        <button id="img4" type="button" data-bs-target="#life-carousel" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+        <button id="img5" type="button" data-bs-target="#life-carousel" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+        <button id="img6" type="button" data-bs-target="#life-carousel" data-bs-slide-to="5"
+                aria-label="Slide 6"></button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="../resources/img/grid/grid-long.png" class="d-block" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Tôi lựa chọn du lịch thay vì tiết kiệm tiền cực khổ</h5>
+            <h5>Tôi lựa chọn du lịch thay vì tiết kiệm tiền cực khổ 1</h5>
             <p>Ngày 24 tháng 5, 2020</p>
           </div>
           <div class="item-pos">
@@ -271,7 +277,7 @@
         <div class="carousel-item">
           <img src="../resources/img/grid/grid-long.png" class="d-block" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Việc hôm nay đừng để ngày mai</h5>
+            <h5>Việc hôm nay đừng để ngày mai 2</h5>
             <p>Ngày 24 tháng 5, 2020</p>
           </div>
           <div class="item-pos">
@@ -282,7 +288,40 @@
         <div class="carousel-item">
           <img src="../resources/img/carousel/life-carousel-big.png" class="d-block" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Sống có ý nghĩa hơn</h5>
+            <h5>Sống có ý nghĩa hơn 3</h5>
+            <p>Ngày 24 tháng 5, 2020</p>
+          </div>
+          <div class="item-pos">
+            <p>3/3</p>
+          </div>
+          <div class="carousel-gradient-bottom"></div>
+        </div>
+        <div class="carousel-item">
+          <img src="../resources/img/carousel/life-carousel-big.png" class="d-block" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Sống có ý nghĩa hơn 4</h5>
+            <p>Ngày 24 tháng 5, 2020</p>
+          </div>
+          <div class="item-pos">
+            <p>3/3</p>
+          </div>
+          <div class="carousel-gradient-bottom"></div>
+        </div>
+        <div class="carousel-item">
+          <img src="../resources/img/carousel/life-carousel-big.png" class="d-block" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Sống có ý nghĩa hơn 5</h5>
+            <p>Ngày 24 tháng 5, 2020</p>
+          </div>
+          <div class="item-pos">
+            <p>3/3</p>
+          </div>
+          <div class="carousel-gradient-bottom"></div>
+        </div>
+        <div class="carousel-item">
+          <img src="../resources/img/carousel/life-carousel-big.png" class="d-block" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Sống có ý nghĩa hơn 6</h5>
             <p>Ngày 24 tháng 5, 2020</p>
           </div>
           <div class="item-pos">
