--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -83,6 +83,14 @@ p{
       font-size: 14px;
       font-weight: 500;
       line-height: 16px;
+      display: inline-block;
+      padding-left: 0.25rem;
+      padding-right: 0.25rem;
+    }
+    .dropdown-toggle{
+      &:after{
+        vertical-align: middle;
+      }
     }
     .fa-search{
       color: white!important;
